tests/invalid-syntax/61015_lexical_error/lexical_error.agu
-- Author: 61015, Filipe Lopes

let @ : Int = 10;